--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.10.8"
   },
-
-
   "devDependencies": {
     "nodemon": "^1.11.0"
   }
